--- a/index.html
+++ b/index.html
@@ -1,103 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Spicspan Stopwatch</title>
-	<style>
-		body {
-			font-family: Arial, sans-serif;
-			text-align: center;
-		}
-		h1 {
-			margin-top: 50px;
-		}
-		#stopwatch {
-			font-size: 2em;
-			margin-top: 20px;
-		}
-		#buttons {
-			margin-top: 30px;
-		}
-		#start, #stop, #reset {
-			font-size: 1em;
-			padding: 10px;
-			margin: 5px;
-			background-color: #3498db;
-			color: #fff;
-			border: none;
-			border-radius: 5px;
-			cursor: pointer;
-		}
-		#start:hover, #stop:hover, #reset:hover {
-			background-color: #2980b9;
-		}
-	</style>
-</head>
-<body>
-	<h1>Spicspan Stopwatch</h1>
-	<div id="stopwatch">00:00:00</div>
-	<div id="buttons">
-		<button id="start">Start</button>
-		<button id="stop">Stop</button>
-		<button id="reset">Reset</button>
-	</div>
-	<script>
-		var stopwatch = document.getElementById("stopwatch");
-		var startButton = document.getElementById("start");
-		var stopButton = document.getElementById("stop");
-		var resetButton = document.getElementById("reset");
-		var interval;
+  <head>
+    <title>Manual Clock</title>
+    <style>
+      .clock-container {
+        width: 200px;
+        height: 200px;
+        border: 5px solid black;
+        border-radius: 50%;
+        background-color: ash;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 40px;
+        color: black;
+        font-family: Arial, sans-serif;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="clock-container">
+      <span id="hours"></span>:<span id="minutes"></span>
+    </div>
+    <script>
+      function updateClock() {
+        var now = new Date();
+        var hours = now.getHours().toString().padStart(2, '0');
+        var minutes = now.getMinutes().toString().padStart(2, '0');
+        document.getElementById("hours").textContent = hours;
+        document.getElementById("minutes").textContent = minutes;
+      }
 
-		var minutes = 0;
-		var seconds = 0;
-		var milliseconds = 0;
-
-		function startStopwatch() {
-			interval = setInterval(function() {
-				milliseconds += 10;
-				if (milliseconds == 1000) {
-					seconds++;
-					milliseconds = 0;
-				}
-				if (seconds == 60) {
-					minutes++;
-					seconds = 0;
-				}
-				stopwatch.textContent = pad(minutes) + ":" + pad(seconds) + ":" + pad(milliseconds/10);
-			}, 10);
-			startButton.disabled = true;
-			stopButton.disabled = false;
-			resetButton.disabled = false;
-		}
-
-		function stopStopwatch() {
-			clearInterval(interval);
-			startButton.disabled = false;
-			stopButton.disabled = true;
-			resetButton.disabled = false;
-		}
-
-		function resetStopwatch() {
-			clearInterval(interval);
-			minutes = 0;
-			seconds = 0;
-			milliseconds = 0;
-			stopwatch.textContent = "00:00:00";
-			startButton.disabled = false;
-			stopButton.disabled = true;
-			resetButton.disabled = true;
-		}
-
-		function pad(number) {
-			if (number < 10) {
-				return "0" + number;
-			} else {
-				return number;
-			}
-		}
-
-		startButton.addEventListener("click", startStopwatch);
-		stopButton.addEventListener("click", stopStopwatch);
-		resetButton.addEventListener("click", resetStopwatch);
-	</script>
-</body>
+      setInterval(updateClock, 1000);
+    </script>
+  </body>
 </html>
