--- a/index.html
+++ b/index.html
@@ -1,37 +1,135 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Manual Clock</title>
+    <title>Ticking Clock</title>
     <style>
       .clock-container {
+        position: relative;
         width: 200px;
         height: 200px;
-        border: 5px solid black;
         border-radius: 50%;
-        background-color: ash;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 40px;
+        background-color: black;
+        overflow: hidden;
+      }
+
+      .clock-face {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-color: blue;
+        box-shadow: inset 0px 0px 10px rgba(255, 255, 255, 0.1);
+      }
+
+      .hand {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform-origin: bottom center;
+        background-color: white;
+      }
+
+      .hour-hand {
+        width: 6px;
+        height: 50px;
+        border-radius: 6px 6px 0 0;
+        transform: translateX(-50%) rotate(0deg);
+      }
+
+      .minute-hand {
+        width: 4px;
+        height: 70px;
+        border-radius: 4px 4px 0 0;
+        transform: translateX(-50%) rotate(0deg);
+      }
+
+      .clock-number {
+        position: absolute;
+        font-size: 16px;
+        font-weight: bold;
         color: black;
-        font-family: Arial, sans-serif;
+        transform-origin: center center;
+      }
+
+      .number-1 {
+        top: 10%;
+        left: 50%;
+        transform: translate(-50%, -100%);
+      }
+
+      .number-2 {
+        top: 20%;
+        left: 80%;
+        transform: translate(-100%, -50%);
+      }
+
+      .number-3 {
+        top: 50%;
+        right: 0%;
+        transform: translate(0%, -50%);
+      }
+
+      .number-4 {
+        bottom: 20%;
+        left: 80%;
+        transform: translate(-100%, 50%);
+      }
+
+      .number-5 {
+        bottom: 10%;
+        left: 50%;
+        transform: translate(-50%, 100%);
+      }
+
+      .number-6 {
+        bottom: 0%;
+        left: 50%;
+        transform: translate(-50%, 100%);
+      }
+
+      .number-7 {
+        bottom: 10%;
+        right: 50%;
+        transform: translate(50%, 100%);
+      }
+
+      .number-8 {
+        bottom: 20%;
+        right: 80%;
+        transform: translate(100%, 50%);
+      }
+
+      .number-9 {
+        top: 50%;
+        left: 0%;
+        transform: translate(0%, -50%);
+      }
+
+      .number-10 {
+        bottom: 20%;
+        left: 20%;
+        transform: translate(0%, 50%);
+      }
+
+      .number-11 {
+        top: 20%;
+        left: 20%;
+        transform: translate(0%, -50%);
+      }
+
+      .number-12 {
+        top: 0%;
+        left: 50%;
+        transform: translate(-50%, -100%);
       }
     </style>
   </head>
   <body>
     <div class="clock-container">
-      <span id="hours"></span>:<span id="minutes"></span>
-    </div>
-    <script>
-      function updateClock() {
-        var now = new Date();
-        var hours = now.getHours().toString().padStart(2, '0');
-        var minutes = now.getMinutes().toString().padStart(2, '0');
-        document.getElementById("hours").textContent = hours;
-        document.getElementById("minutes").textContent = minutes;
-      }
-
-      setInterval(updateClock, 1000);
-    </script>
-  </body>
-</html>
+      <div class="clock-face">
+        <div class="hour-hand hand"></div>
+        <div class="minute-hand hand"></div>
+        <div class="clock-number number-1">1</div>
+        <div
